tests/files/type_checker_tests/should_fail/019.cmdr
//Should fail on set when left side is not a variable
true = 3;